# MBPacketManager

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  CMakeLists_2022-09-18.txt  ComputerInfo.mbd  MBPMCLIMain.cpp  MBPM_CLI.cpp  MBPM_CLI.h  MBPM_CMakeFunctions.txt  MBPM_CompilationConfigurations.json  MBPM_CompileInfo.json  MBPM_CompileInfo_2.json  MBPM_EmptyPacketInfo.txt  MBPM_FileInfoIgnore  MBPM_PacketInfo  MBPM_SourceInfo.json  MBPM_TestMain.cpp  MBPacketManager.cpp  MBPacketManager.h  MBSourceInfo.json  MB_PacketProtocol.cpp  MB_PacketProtocol.h  README.mbd  README.md  TODO.txt  TestCmake.txt  TestCmake2.txt  VimPacketInfo.json  compile_commands.json
Bash/: MBBashDefaults.sh  MBPM_Bash.cpp  MBPM_Bash.h  mbbash.inc
Bash/mbpm_bash/: MBPM_PacketInfo  mbpm_completion.sh
BashCompletion/: MBPM_PacketInfo
Docs/: CLI.mbd  DevelopmentStructure.mbd  Extensions.mbd  History.mbd  IndexOption.mbd  Installation.mbd  MBDocBuild.json  MBPM_FileInfo  MBPM_PacketInfo  Packets.mbd  PacketsSpecification.mbd  SubPackets.mbd  Terminology.mbd  index.mbd
Docs/Changelog/: 2022-07-03.mbd  2022-07-28.mbd
Docs/MBBuild/: Buildsystem.mbd  CLI.mbd  History.mbd  MBCompileConfigurations.mbd  MBDependancySpecification.mbd  MBDocBuild.json  MBSourceInfo.mbd  TypeInfo.mbd  index.mbd
Docs/MBBuild/Docs/: MBDocBuild.json  index.mbd
Docs/Networking/: index.mbd
Docs/Options/: IndexOption.mbd
Generic/: GenericExtension.cpp  GenericExtension.h
MBBuild/: MBBuild.cpp  MBBuild.h  MBBuildMain.cpp  ¨
MBCLI/: CMakeLists.txt  MBCLI.cpp  MBCLI.h  MBPM_FileInfo  MBPM_FileInfoIgnore  MBPM_PacketInfo
MBDoc/: MBPM_MBDoc.cpp  MBPM_MBDoc.h
MBPM_Tests/UpdateTests/: MBPM_FileInfo  NewTop.txt
MBPM_Tests/UpdateTests/Recursive1/: New1_1.txt
MBPM_Tests/UpdateTests/Recursive1/Recursive2/: New3_1.txt  Original.txt
MBPM_Tests/UpdateTests/Recursive1/Recursive2/NewDirectory/: NewNew.txt
MBSlippi/: MBPM_MBSlippi.cpp  MBPM_MBSlippi.h
ProjectDairy/: 2021-10-19.md  2021-10-23.md  2021-10-31.md  2021-11-14.md  2022-04-21.md  2022-04-27.md  2022-05-20.md  2022-05-28.md  2022-06-03.md
Vim/: MBPM_Vim.cpp  MBPM_Vim.h  mbpm.vim  mbpmscript.inc
Vim/mbpm_vim/: .MBPM_PacketInfo.swp  .Test.vim.swp  .VimPacketInfo.json.swp  MBPM_PacketInfo  VimPacketInfo.json
